# Unified-FastAPI-Gunicorn-Log

./: .dockerignore  LICENSE  README.md  docker-compose.yaml  dockerfile  example.py  example_inherited.py  main.py  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json  docker-compose.yml
src/: unified.py
src/unified_api_log/: __init__.py  gunicorn.py  log.py  task_server.py
tests/: fastapi.py
unified_api_log/: gunicorn.py
