[metadata]
name = Unified-FastAPI-Gunicorn-Log
version = 0.4.0
author = Tanapat Kahabodeekanokkul
author_email = contact@sati.co.th
description = Unified FastAPI, Uvicorn, and Gunicorn logger by Logguru
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pahntanapat/Unified-FastAPI-Gunicorn-Log
project_urls =
    Bug Tracker = https://github.com/pahntanapat/Unified-FastAPI-Gunicorn-Log/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    loguru
    gunicorn
    uvicorn

[options.packages.find]
where = src